Update workflow: remove version pattern, add environment
Removed the version pattern `'v*.*.*'` from the workflow.
Added an `environment` key with the value `production` to the
`build-test-pack` job configuration. This change aligns the
workflow with environment-specific deployment requirements.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-test-pack:
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
       - name: Checkout repository
