Update <Company> metadata in Outcome.csproj
The `<Company>` field in the `Outcome.csproj` file was updated
from "YourCompany" to "JM Mbouma." This change provides a more
accurate and personalized attribution for the project, aligning
it with the author's or maintainer's identity.

--- a/src/Outcome/Outcome.csproj
+++ b/src/Outcome/Outcome.csproj
@@ -8,7 +8,7 @@
     <PackageId>Outcome</PackageId>
     <Version>1.0.0</Version>
     <Authors>Jean</Authors>
-    <Company>YourCompany</Company>
+    <Company>JM Mbouma</Company>
     <Description>A modern C# functional result type with structured errors, async workflows, LINQ support, deconstruction, and Source Link.</Description>
     <PackageTags>outcome result monad functional async linq error</PackageTags>
     <RepositoryUrl>https://github.com/JeanMarcMbouma/Outcome</RepositoryUrl>
