Add CI/CD workflow for versioned releases
Configured GitHub Actions to trigger on `push` events for tags
matching the pattern `v*.*.*` (e.g., `v1.0.0`). Added permissions
for `id-token: write` and `contents: read` to enable secure
authentication and repository access. Introduced a `build-test-pack`
job running on `ubuntu-latest` in the `production` environment
to support building, testing, and packaging as part of the CI/CD
pipeline.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*.*.*'   # e.g. v1.0.0
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build-test-pack:
     runs-on: ubuntu-latest
