Update CI/CD workflow for NuGet and .NET 8.0 support
- Trigger workflow on `push` events for tags matching `v*.*.*`.
- Added `id-token: write` and `contents: read` permissions.
- Upgraded to `actions/setup-dotnet@v4` with `dotnet-version: 8.0.x`.
- Added `NuGet/setup-nuget@v2.0.0` for NuGet setup.
- Removed `dotnet nuget add source` step as it's no longer needed.
- Updated `dotnet nuget push` to use API key and full source URL.
- Consolidated `.snupkg` publishing into the updated push command.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - 'v*.*.*'   # e.g. v1.0.0
-
+      
 permissions:
   id-token: write
   contents: read
@@ -22,7 +22,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-
+      - name: Setup NuGet.exe for use with actions
+        # You may pin to the exact commit or the version.
+        # uses: NuGet/setup-nuget@a21f25cd3998bf370fde17e3f1b4c12c175172f9
+        uses: NuGet/setup-nuget@v2.0.0
+          
       - name: Restore dependencies
         run: dotnet restore Outcome.slnx
 
@@ -39,12 +43,9 @@ jobs:
         id: login
         with:
           user: ${{ secrets.NUGET_USER }}
-          
-      - name: Add NuGet source
-        run: dotnet nuget add source https://api.nuget.org/v3/index.json --name nuget.org --store-password-in-clear-text --username ${{ secrets.NUGET_USER }} --password ${{ steps.login.outputs.NUGET_API_KEY }}
-      
+    
       - name: Publish to NuGet
-        run: dotnet nuget push ./artifacts/*.nupkg --source nuget.org
+        run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
 
       - name: Publish Symbols
-        run: dotnet nuget push ./artifacts/*.snupkg --source nuget.org
+        run: dotnet nuget push ./artifacts/*.snupkg --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
