Update package metadata and automate NuGet packaging
Updated the `<PackageId>` in `Outcome.csproj` from `Outcome` to `BbQ.Outcome` to align with a new naming convention.
Added `<GeneratePackageOnBuild>` to automatically generate a NuGet package during the build process.
Introduced the `<Title>` property with the value `Outcome<T>` to enhance the package's metadata with a more descriptive title.

--- a/src/Outcome/Outcome.csproj
+++ b/src/Outcome/Outcome.csproj
@@ -5,7 +5,7 @@
     <TargetFrameworks>net8.0</TargetFrameworks>
 
     <!-- Package metadata -->
-    <PackageId>Outcome</PackageId>
+    <PackageId>BbQ.Outcome</PackageId>
     <Version>1.0.0</Version>
     <Authors>Jean</Authors>
     <Company>JM Mbouma</Company>
@@ -21,12 +21,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
+    <RootNamespace>BbQ.Outcome</RootNamespace>
 
     <!-- Source Link settings -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>BbQ.Outcome&lt;T&gt;</Title>
   </PropertyGroup>
 
   <ItemGroup>
