--- a/src/Outcome.Tests/Outcome.Tests.csproj
+++ b/src/Outcome.Tests/Outcome.Tests.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
+    <RootNamespace>BbQ.Outcome.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
