--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,13 @@ jobs:
 
       - name: Run tests
         run: dotnet test Outcome.slnx --configuration Release --no-build --verbosity normal
-
+        
+      - name: Extract version
+        id: version
+        run: echo "${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+        
       - name: Pack NuGet
-        run: dotnet pack src/Outcome/Outcome.csproj --configuration Release --no-build -o ./artifacts
+        run: dotnet pack src/Outcome/Outcome.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ steps.version.outputs.version }}
       - name: NuGet login (OIDC → temp API key)
         uses: NuGet/login@v1
         id: login
