Add source generator for Error<T> helper properties
Introduced a new source generator to auto-generate `Error<T>`
helper properties for enums marked with the `[QbqOutcome]`
attribute. This reduces boilerplate, ensures consistency, and
leverages XML documentation for descriptions.

Key changes:
- Added `Outcome.SourceGenerators` project targeting `netstandard2.0`.
- Implemented `OutcomeSourceGenerator` to generate static helper
  classes for enums with `[QbqOutcome]`.
- Updated `Outcome.slnx` to include the new project.
- Modified `Error<TCode>` to be non-sealed for extensibility.
- Added unit tests in `OutcomeSourceGeneratorTests.cs` to validate
  generated code.
- Updated README with usage instructions, examples, and benefits.

These changes improve developer experience and maintainability
by automating error handling code generation.

--- a/src/Outcome.Tests/Outcome.Tests.csproj
+++ b/src/Outcome.Tests/Outcome.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Outcome\Outcome.csproj" />
+    <ProjectReference Include="..\Outcome.SourceGenerators\Outcome.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
