--- a/src/Outcome/Outcome.csproj
+++ b/src/Outcome/Outcome.csproj
@@ -39,4 +39,9 @@
     <None Include="../../README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- Include source generator as an analyzer in the package -->
+    <ProjectReference Include="../Outcome.SourceGenerators/Outcome.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+  </ItemGroup>
+
 </Project>
