--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,12 @@ jobs:
         id: version
         run: echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
         
-      - name: Pack NuGet
+      - name: Pack NuGet Outcome
         run: dotnet pack src/Outcome/Outcome.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ steps.version.outputs.version }}
+      
+      - name: Pack NuGet Cqrs
+        run: dotnet pack src/BbQ.Cqrs/BbQ.Cqrs.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ steps.version.outputs.version }}
+      
       - name: NuGet login (OIDC → temp API key)
         uses: NuGet/login@v1
         id: login
