Refactor documentation and decouple BbQ libraries
Refactored README.md to introduce BbQ.Outcome and BbQ.Cqrs as distinct packages under a unified library suite. Enhanced descriptions, added detailed examples, and reorganized content for clarity.

- Created dedicated README files for BbQ.Outcome and BbQ.Cqrs.
- Added sections for Quick Start, Core Components, and Unit Testing.
- Improved Outcome source generator documentation with examples.
- Decoupled BbQ.Cqrs from Outcome by removing project references.
- Cleaned up unused namespace imports in LoggingBehavior.cs.
- Updated NuGet packaging to include README files correctly.

These changes improve usability, maintainability, and developer experience.

--- a/src/BbQ.Cqrs/BbQ.Cqrs.csproj
+++ b/src/BbQ.Cqrs/BbQ.Cqrs.csproj
@@ -37,12 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Outcome.SourceGenerators\Outcome.SourceGenerators.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
-    <ProjectReference Include="..\Outcome\Outcome.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <!-- Include README in the NuGet package -->
-    <None Include="../../README.md" Pack="true" PackagePath="" />
+    <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 </Project>
