--- a/src/Outcome/Outcome.csproj
+++ b/src/Outcome/Outcome.csproj
@@ -36,7 +36,7 @@
     <!-- Source Link package -->
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     <!-- Include README in the NuGet package -->
-    <None Include="../../README.md" Pack="true" PackagePath="" />
+    <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
