Enforce UTF-8 for Markdown and update README links
Added a `.gitattributes` rule to enforce UTF-8 encoding for Markdown files to preserve emoji and special characters. Updated the `README.md` file by modifying the BbQ.Outcome documentation link and adding a placeholder line under the "License" section.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,9 @@
 ###############################################################################
 * text=auto
 
+# Enforce UTF-8 encoding for markdown files to preserve emoji and special characters
+*.md text working-tree-encoding=UTF-8
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
