Refactor logging and mediator pipeline integration
- Added `Microsoft.Extensions.Logging.Console` package to enable console-based logging.
- Removed `LoggingBehavior` class and shifted logging to be dynamically injected via DI.
- Updated `Program.cs` to configure logging and register `LoggingBehavior`.
- Refactored `Mediator` class for improved type safety and behavior pipeline handling.
- Added a mediator call to fetch a user by ID in `Program.cs`.
- Cleaned up unused namespaces and adjusted method calls for consistency.

--- a/src/BbQ.Cqrs.Samples/BbQ.Cqrs.Samples.csproj
+++ b/src/BbQ.Cqrs.Samples/BbQ.Cqrs.Samples.csproj
@@ -10,11 +10,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BbQ.Cqrs\BbQ.Cqrs.csproj" />
-    <ProjectReference Include="..\Outcome.SourceGenerators\Outcome.SourceGenerators.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+    <ProjectReference Include="..\Outcome.SourceGenerators\Outcome.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
 
     <ProjectReference Include="..\Outcome\Outcome.csproj" />
   </ItemGroup>
