Add BbQ.Outcome.SourceGenerators NuGet package
Introduce a new NuGet package, `BbQ.Outcome.SourceGenerators`,
to provide source generators for the `BbQ.Outcome` library.
Updated the GitHub Actions workflow to include packaging
of the new project. Enhanced `Outcome.SourceGenerators.csproj`
with metadata, enabled NuGet package generation, and added
Source Link support for better debugging.

Included `README.md` in the NuGet package and updated it
with comprehensive documentation, including an overview,
features, installation instructions, usage details, and
contribution guidelines.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Pack NuGet Outcome
         run: dotnet pack src/Outcome/Outcome.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ steps.version.outputs.version }}
       
+      - name: Pack NuGet SourceGenerators
+        run: dotnet pack src/Outcome.SourceGenerators/Outcome.SourceGenerators.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ steps.version.outputs.version }}
+      
       - name: Pack NuGet Cqrs
         run: dotnet pack src/BbQ.Cqrs/BbQ.Cqrs.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ steps.version.outputs.version }}
       
