--- a/src/Outcome.SourceGenerators/Outcome.SourceGenerators.csproj
+++ b/src/Outcome.SourceGenerators/Outcome.SourceGenerators.csproj
@@ -9,8 +9,27 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     
     <!-- Packaging settings for the analyzer -->
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <IncludeBuildOutput>true</IncludeBuildOutput>
+    
+    <!-- Package metadata -->
+    <PackageId>BbQ.Outcome.SourceGenerators</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Jean</Authors>
+    <Company>JM Mbouma</Company>
+    <Description>Source generators for BbQ.Outcome - Automatically generates utility methods and extension methods for the Outcome type.</Description>
+    <PackageTags>outcome result monad functional async linq error sourceGenerator</PackageTags>
+    <RepositoryUrl>https://github.com/JeanMarcMbouma/Outcome</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/JeanMarcMbouma/Outcome</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <LicenseExpression>MIT</LicenseExpression>
+    <Title>BbQ.Outcome Source Generators</Title>
+    
+    <!-- Source Link settings -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +38,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Include README in the NuGet package -->
+    <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
