Update NuGet packaging for Outcome.SourceGenerators
Enhanced NuGet packaging configuration:
- Enabled `<CopyLocalLockFileAssemblies>` to ensure local assemblies are copied to the output directory.
- Disabled `<AppendTargetFrameworkToOutputPath>` for correct output path structure.
- Set `<RestoreProjectStyle>` to `PackageReference` for explicit project style.
- Added `<PackageReadmeFile>` to include `README.md` in package metadata.
- Included `README.md` in the NuGet package content.
- Packaged `Outcome.SourceGenerators.dll` under `analyzers/dotnet/cs` for proper analyzer structure.

--- a/src/Outcome.SourceGenerators/Outcome.SourceGenerators.csproj
+++ b/src/Outcome.SourceGenerators/Outcome.SourceGenerators.csproj
@@ -12,6 +12,11 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <IncludeBuildOutput>true</IncludeBuildOutput>
     
+    <!-- Critical: Output analyzer to the correct NuGet package path -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    
     <!-- Package metadata -->
     <PackageId>BbQ.Outcome.SourceGenerators</PackageId>
     <Version>1.0.0</Version>
@@ -24,6 +29,7 @@
     <RepositoryType>git</RepositoryType>
     <LicenseExpression>MIT</LicenseExpression>
     <Title>BbQ.Outcome Source Generators</Title>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     
     <!-- Source Link settings -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -44,6 +50,11 @@
   <ItemGroup>
     <!-- Include README in the NuGet package -->
     <None Include="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <!-- Ensure analyzer is included in the correct NuGet package structure -->
+  <ItemGroup>
+    <None Include="$(OutputPath)Outcome.SourceGenerators.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
